    displays a more specific error instead of the generic "something went
    wrong" error page.

    If a multifactor authentication is rejected by the validation service,
    the user is now returned to the multifactor authentication screen and
    the error message is provided to the template, rather than taking the
    user to a dead-end error page with a generic error.

WebAuth 4.5.4 (2013-08-16)

    If the user presents a login token for one user and a webkdc-proxy
    token for a different user, or, more generally, mismatched
    webkdc-proxy tokens, ignore and log the mismatched webkdc-proxy token
    rather than rejecting the authentication with a fatal error.  While
    this case ideally should not happen, in practice it's not uncommon for
    users sharing devices to attempt authentication (due to session factor
    requirements or forced login) while still possessing webkdc-proxy
    tokens for another user, and rejecting the authentication instead of
    replacing the older webkdc-proxy token does nothing to improve the
    situation.

    Fix handling of non-password session factors.  Requiring any session
    factor other than password, for users using password authentication,
    resulted in the user being repeatedly presented with the password
    login page because mod_webkdc did not notice the password session
    factor and continue to asking for a multifactor authentication.  The
    logic is still not entirely correct for users who use non-password
    initial authentication factors; that will be fixed in a subsequent
    release.

    Improve handling of required initial factors when users have a way to
    establish initial credentials that don't include password.  mod_webkdc
    now returns a forced login error instead of multifactor required if
    the user's initial factors don't satisfy the request and don't contain
    a password factor.

    If a password authentication is required in order to obtain a Kerberos